# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
configuration/: root_directory.h.in
include/: Camera.h  Data.h  Error.h  FileSystem.h  Framebuffer.h  GuiWindow.h  ProgramState.h  Renderer.h  Shader.h  Window.h
include/Controllers/: EntityController.h  EventController.h  InputController.h  ServiceLocator.h
include/Entities/: Entity.h  Ground.h  Light.h  LightBox.h  Model3D.h  Skybox.h
include/Model/: Mesh.h  Model.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
resources/objects/chess/: license.txt  scene.gltf
resources/objects/chess_set/: untitled.mtl
resources/objects/chess_table/: chess_table.mtl
resources/objects/flashlight/: newer.mtl
resources/objects/fountain/: fountain.mtl  scene.gltf
resources/objects/iron_gate/: large_iron_gate.mtl
resources/objects/park_bench/: park_bench.mtl
resources/objects/street_lamp/: Street_Lamp_7.mtl
resources/objects/table_chair_set/: table_chair_set.mtl
resources/objects/telescope/: license.txt  scene.gltf  telescope.mtl
resources/shaders/: blur.fs  blur.vs  entity.fs  entity.vs  entityShader.fs  instancedEntity.vs  lightBox.fs  normalAndHeightMapEntity.fs  normalMapEntity.fs  normalMapEntity.vs  postProcessing.fs  postProcessing.vs  shader.fs  shader.vs  skybox.vs
src/: Camera.cpp  Error.cpp  FileSystem.cpp  Framebuffer.cpp  GuiWindow.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
src/Controllers/: EntityController.cpp  EventController.cpp  InputController.cpp
src/Entities/: Ground.cpp  Light.cpp  LightBox.cpp  Model3D.cpp  Skybox.cpp
src/Model/: Mesh.cpp  Model.cpp
(+1 files in other folders)
